--- a/fixing_module/views/fixing.xml
+++ b/fixing_module/views/fixing.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
     <record id="action_courier_id_to_char" model="ir.actions.server">
-        <field name="name">Courier ID to Courier Char</field>
+        <field name="name">Courier ID to Courier Company ID</field>
         <field name="type">ir.actions.server</field>
         <field name="model_id" ref="model_stock_picking"/>
         <field name="binding_model_id" ref="model_stock_picking"/>
