--- a/multiple_order_process/reports/delivery_form.xml
+++ b/multiple_order_process/reports/delivery_form.xml
@@ -1,7 +1,7 @@
 <odoo>
     <template id="report_delivery_form">
         <t t-call="web.html_container">
-            <t t-foreach="docs" t-as="o">
+            <t t-foreach="docs[::-1]" t-as="o">
                 <t t-if="o.picking_type_code == 'outgoing'">
                     <div class="page" style="page-break-before: always;">
                         <br></br>
@@ -34,8 +34,8 @@
                             <tr>
                                 <td colspan="5" style="width:100mm; border: 1pt solid black; text-align:center;">
                                     <span style="font-size:12px;">
-                                        <t t-esc="o.courier_company.courier_company.name"/>:
-                                        <t t-esc="o.courier_company.courier_company.courier_account_number"/>
+                                        <t t-esc="o.courier_company_id.name"/>:
+                                        <t t-esc="o.courier_company_id.courier_account_number"/>
                                     </span>
                                 </td>
                             </tr>
@@ -51,7 +51,7 @@
                                 </td>
                                 <td style="width:20mm; border: 1pt solid black;">
                                     <span style="font-size:12px; text-align:center;">
-                                        <t t-esc="o.courier_company.airport"/>
+                                        <t t-esc="o.airport"/>
                                     </span>
                                 </td>
                             </tr>
@@ -61,7 +61,7 @@
                                 </td>
                                 <td style="width:20mm; border: 1pt solid black">
                                     <span style="font-size:12px;">
-                                        <t t-esc="o.courier_company.hub"/>
+                                        <t t-esc="o.hub"/>
                                     </span>
                                 </td>
                             </tr>
