--- a/multiple_order_process/views/courier.xml
+++ b/multiple_order_process/views/courier.xml
@@ -34,6 +34,7 @@
                             <field name="serviced_awb_link"/>
                             <field name="awb_number"/>
                             <field name="delivery_order_number"/>
+                            <field name="delivery_order_number_many" widget="many2many_tags"/>
                         </tree>
                     </field>
                 </page>
@@ -49,6 +50,8 @@
                 <field name="serviced_awb_link" domain="[('is_company', '=', True), ('courier_details', '=', True)]"/>
                 <field name='awb_number'/>
                 <field name='delivery_order_number'/>
+                <field name="delivery_order_number_many" widget="many2many_tags"/>
+
             </tree>
         </field>
     </record>
@@ -67,6 +70,8 @@
                         </group>
                         <group>
                             <field name='delivery_order_number'/>
+                            <field name="delivery_order_number_many" widget="many2many_tags"/>
+
                         </group>
                     </group>
                 </sheet>
@@ -167,7 +172,7 @@
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">courier.company.code</field>
         <field name="view_mode">tree</field>
-        <field name="context">{'custom_pin_name': True}</field>
+        <field name="context">{}</field>
     </record>
 
     <record id="action_courier_priority" model="ir.actions.act_window">
