--- a/multiple_order_process/reports/Master_delivery_form.xml
+++ b/multiple_order_process/reports/Master_delivery_form.xml
@@ -1,31 +1,35 @@
 <odoo>
-    <template id="report_delivery_form">
+    <template id="report_delivery_form_master">
         <t t-call="web.html_container">
+            <t t-set="filtered_list" t-value="[]"/>
             <t t-set="client_list" t-value="[]"/>
-            <t t-set="done_list" t-value="{}"/>
+            <t t-set="records_list" t-value="[]"/>
+            <t t-set="done_list" t-value="[]"/>
             <t t-set="initial" t-value="0"/>
-            <t t-foreach="docs" t-as="record">
-                <t t-if="record.client_order not in client_list">
-                    <t t-set="client_list" t-value="client_list + [record.client_order]"/>
+            <t t-foreach="docs.sorted(lambda rec:rec.client_order)" t-as="record">
+                <t t-set="records_list" t-value="records_list + [record.id]"/>
 
+
+                <t t-if="record.client_order not in client_list">
+                    <t t-set="filtered_list" t-value="filtered_list + [record]"/>
+                    <t t-set="client_list" t-value="client_list + [record.client_order]"/>
                 </t>
             </t>
-            <t t-foreach="docs.sorted(lambda rec: rec.unique_ref.global_item_code.name)" t-as="o">
+            <t t-foreach="filtered_list" t-as="o">
+                 <t t-if="o.client_order not in done_list">
+                            <t t-set="done_list" t-value="done_list + [o.client_order]"/>
+                            <t t-set="initial" t-value="initial+1"/>
+                        </t>
 
+                <t t-set="remaining_qty" t-value="0"/>
+                <t t-set="remaining_mrp" t-value="0"/>
+                <t t-set="remaining_total_value" t-value="0"/>
 
                 <t t-if="o.picking_type_code == 'outgoing'">
                     <div class="page" style="page-break-before: always;">
                         <br></br>
-                        <t t-if="o.client_order not in done_list">
-                            <t t-set="initial" t-value="initial+1"/>
-
-                            <t t-esc="done_list.update({o.client_order:initial})"/>
-                        </t>
-
                         <table style="width:100mm; border: 1pt solid black; border-collapse: collapse;">
                             <tr>
-                                <td>
-                                </td>
                                 <td colspan="5"
                                     style="width:100mm; padding-top: 2mm; padding-left: 5mm; text-align:center;">
                                     <img t-if="o.company_id.logo"
@@ -62,8 +66,8 @@
                                 <td style="width:20mm; border: 1pt solid black;">
                                     <span style="font-size:12px;">MAA</span>
                                 </td>
-                                <td colspan="3" rowspan="2" style="width:60mm; border: 1pt solid black;">
-                                    <t t-set="barcode_size" t-value="'width:50mm;height:13mm'"/>
+                                <td colspan="3" rowspan="2" style="width:40mm; border: 1pt solid black;">
+                                    <t t-set="barcode_size" t-value="'width:50mm;height:10mm'"/>
                                     <div t-out="o.awb_number.awb_number"
                                          t-options="{'widget': 'barcode', 'symbology': 'auto', 'img_style': barcode_size}"/>
                                     <span style="font-size:11px; text-align:center;"
@@ -86,8 +90,8 @@
                                 </td>
                             </tr>
                             <tr style="text-align:left;">
-                                <td colspan="3" style="width:40mm; border: 1pt solid black; padding: 1mm;height:100px;">
-                                    <div style="font-size:11px;">
+                                <td colspan="3" style="width:40mm; border: 1pt solid black; padding: 1mm;height:90px;">
+                                    <div style="font-size:10px;">
                                         To,
                                         <br/>
                                         <span t-esc="o.partner_id.name[0:25]"/>
@@ -106,7 +110,6 @@
                                         <span t-field="o.partner_id.zip"/>
                                         <br/>
                                         <span t-field="o.partner_id.state_id"/>
-                                        <br/>
 
                                         <t t-if="not o.partner_id.name[25:50]">
 
@@ -130,7 +133,7 @@
                                     </div>
                                 </td>
                                 <td colspan="2"
-                                    style="width:20mm; border: 1pt solid black; font-size:11px; padding: 2mm;">
+                                    style="width:20mm; border: 1pt solid black; font-size:10px; padding: 2mm;">
                                     Order No:
                                     <t t-esc="o.unique_ref.ref_no"/>
                                     <br/>
@@ -169,34 +172,86 @@
                                     <span>Total Value</span>
                                 </td>
                             </tr>
-                            <t t-foreach="o.move_ids_without_package" t-as="move_line">
+                            <t t-set="client_order_count"
+                               t-value="docs.search_count([('client_order','=',o.client_order),('id','in',records_list)])"/>
+                            <t t-set="current_count" t-value="0"/>
+
+                            <t t-foreach="docs.search([('client_order','=',o.client_order),('id','in',records_list)])"
+                               t-as="dup">
+                                <t t-foreach="dup.move_ids_without_package" t-as="move_line">
+                                    <t t-if="current_count&lt;3">
+                                        <tr style="font-size:10px; padding: 2mm;">
+                                            <td colspan="2"
+                                                style="width:40mm; border: 1pt solid black; text-align:center;">
+                                                <t t-if="move_line.product_id.default_code">
+                                                    <t t-esc="move_line.product_id.default_code"/>
+                                                </t>
+                                            </td>
+
+                                            <td style="width:20mm; border: 1pt solid black; text-align:center;">
+                                                <span t-esc="round(move_line.product_uom_qty)"/>
+                                            </td>
+                                            <td style="width:20mm; border: 1pt solid black; text-align:center;">
+                                                <span t-esc="round(move_line.product_id.mrp_field)"/>
+                                            </td>
+                                            <td style="width:20mm; border: 1pt solid black; text-align:center;">
+                                                <t t-esc="round(move_line.product_uom_qty * move_line.product_id.mrp_field)"/>
+                                            </td>
+                                        </tr>
+                                        <t t-set="client_order_count" t-value="client_order_count-1"/>
+                                        <t t-set="current_count" t-value="current_count+1"/>
+                                    </t>
+                                    <t t-else="current_count>=3">
+                                        <t t-set="remaining_qty" t-value="(remaining_qty+move_line.product_uom_qty)"/>
+                                        <t t-set="remaining_mrp" t-value="(remaining_mrp+move_line.product_id.mrp_field)"/>
+                                        <t t-set="remaining_total_value" t-value="(remaining_total_value+round(move_line.product_uom_qty * move_line.product_id.mrp_field))"/>
+
+                                    </t>
+
+
+                                </t>
+                            </t>
+                            <t t-if="client_order_count>0">
+
                                 <tr style="font-size:12px; padding: 2mm;">
                                     <td colspan="2" style="width:40mm; border: 1pt solid black; text-align:center;">
                                         <t t-if="move_line.product_id.default_code">
-                                            <t t-esc="move_line.product_id.default_code"/>
+                                            <t t-if="client_order_count==1">
+
+                                                <t t-esc="'+'+str(client_order_count)+' product' "/>
+                                            </t>
+                                            <t t-if="client_order_count&gt;1">
+
+                                                <t t-esc="'+'+str(client_order_count)+' products' "/>
+                                            </t>
                                         </t>
                                     </td>
 
                                     <td style="width:20mm; border: 1pt solid black; text-align:center;">
-                                        <span t-esc="round(move_line.product_uom_qty)"/>
+                                                                                        <span t-esc="round(remaining_qty)"/>
+
+                                        <!--                                            <span t-esc="round(move_line.product_uom_qty)"/>-->
                                     </td>
                                     <td style="width:20mm; border: 1pt solid black; text-align:center;">
-                                        <span t-esc="round(move_line.product_id.mrp_field)"/>
+                                                                                        <span t-esc="round(remaining_mrp)"/>
+
+                                        <!--                                            <span t-esc="round(move_line.product_id.mrp_field)"/>-->
                                     </td>
                                     <td style="width:20mm; border: 1pt solid black; text-align:center;">
-                                        <t t-esc="round(move_line.product_uom_qty * move_line.product_id.mrp_field)"/>
+                                                                                        <span t-esc="round(remaining_total_value)"/>
+
+                                        <!--                                            <t t-esc="round(move_line.product_uom_qty * move_line.product_id.mrp_field)"/>-->
                                     </td>
                                 </tr>
                             </t>
-
-                            <tr style="font-size:12px;">
-                                <td colspan="5" style="width:60mm; padding: 2mm;">
+                            <tr style="font-size:11px;">
+                                <td colspan="5" style="width:60mm; padding: 1mm;">
                                     GST IN:
                                     <span t-field="o.company_id.vat"/>
                                 </td>
                             </tr>
-                            <tr style="font-size:9px;">
-                                <td colspan="5" style="width:60mm; padding: 2mm;">
+                            <tr style="font-size:10px;">
+                                <td colspan="5" style="width:60mm; padding: 1mm;">
                                     All the terms &amp; conditions of respective combines &amp; BI Worldwide apply
                                     Subject to Chennai Jurisdiction only. E. &amp; O.E. This is a computer generated
                                     challan
@@ -205,16 +260,17 @@
                             </tr>
                             <tr style="font-size:9px;">
                                 <td colspan="5"
-                                    style="width:60mm; padding: 2mm; text-align:center; border: 1pt Solid Black">
+                                    style="width:60mm; padding: 1mm; text-align:center; border: 1pt Solid Black;">
+
                                     If Undelivered, Return to:
-                                    <br/>
                                     <br/>
                                     BI Worldwide India Private Limited
                                     <br/>
                                     Door No.8 &amp; 8A, DRR Avenue, Audco Nagar,
                                     <br/>
                                     Kattupakkam, Chennai 600056.
-                                    <span style="float:right"><t t-esc="done_list.get(o.client_order)"/></span>
+                                    <span style="float:right"><t t-esc="initial"/></span>
+
                                 </td>
                             </tr>
                         </table>
@@ -224,24 +280,27 @@
         </t>
     </template>
 
-    <record id="action_report_delivery_form" model="ir.actions.report">
-        <field name="name">Delivery Form</field>
+
+    <record id="action_report_master_delivery_form" model="ir.actions.report">
+        <field name="name">Master Delivery Form</field>
         <field name="model">stock.picking</field>
         <field name="report_type">qweb-pdf</field>
-        <field name="report_name">multiple_order_process.report_delivery_form</field>
-        <field name="report_file">multiple_order_process.report_delivery_form</field>
+        <field name="report_name">multiple_order_process.report_delivery_form_master</field>
+        <field name="report_file">multiple_order_process.report_delivery_form_master</field>
         <field name="binding_model_id" ref="stock.model_stock_picking"/>
+        <field name="binding_view_types">list</field>
+
         <field name="binding_type">report</field>
     </record>
 
 
-    <record id="action_delivery_form_for_mutliple_order_process" model="ir.actions.server">
-        <field name="name">Delivery form -- multi order</field>
-        <field name="type">ir.actions.server</field>
-        <field name="model_id" ref="stock.model_stock_picking"/>
-        <field name="binding_model_id" ref="stock.model_stock_picking"/>
-        <field name="state">code</field>
-        <field name="code">records.generate_delivery_form_multi_order_process()</field>
-    </record>
+    <!--    <record id="action_delivery_form_for_mutliple_order_process" model="ir.actions.server">-->
+    <!--        <field name="name">Delivery form &#45;&#45; multi order</field>-->
+    <!--        <field name="type">ir.actions.server</field>-->
+    <!--        <field name="model_id" ref="stock.model_stock_picking"/>-->
+    <!--        <field name="binding_model_id" ref="stock.model_stock_picking"/>-->
+    <!--        <field name="state">code</field>-->
+    <!--        <field name="code">records.generate_delivery_form_multi_order_process()</field>-->
+    <!--    </record>-->
 
 </odoo>
